<resources>
    <string name="app_name">AndersenIntensive</string>
    <string name="first_homework_description">1. The first homework was to initialize the project through the console.</string>
    <string name="second_homework_description">2. Second homework is here. (touch me to watch)</string>
    <string name="second_homework_logging_callbacks_notification">This activity lifecycle callbacks are logged.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">Zero</string>
    <string name="toast">Toast</string>
    <string name="third_homework_description">3. Third homework is here. (touch me to watch)</string>
    <string name="image_url_edit_text_hint">Enter image url</string>
    <string name="load_image">Load image</string>
    <string name="loaded_image">Loaded image</string>
    <string name="loading_error">Loading error</string>
    <string name="forth_homework_description">4. Forth homework is here. (touch me to watch)</string>
    <string name="fifth_homework_description">5. Fifth homework is here. (touch me to watch)</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="sixth_homework_description">6. Sixth homework is here. (touch me to watch)</string>
    <string name="contact_avatar">Contact avatar</string>
    <string name="delete">Delete</string>
</resources>