<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.main.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/HomeworkMenuTextView"
            android:text="@string/first_homework_description" />

        <TextView
            android:id="@+id/second_homework_menu_text_view"
            style="@style/HomeworkMenuTextView"
            android:text="@string/second_homework_description" />

        <TextView
            android:id="@+id/third_homework_menu_text_view"
            style="@style/HomeworkMenuTextView"
            android:text="@string/third_homework_description" />

        <TextView
            android:id="@+id/forth_homework_menu_text_view"
            style="@style/HomeworkMenuTextView"
            android:text="@string/forth_homework_description" />

        <TextView
            android:id="@+id/fifth_homework_menu_text_view"
            style="@style/HomeworkMenuTextView"
            android:text="@string/fifth_homework_description" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>