<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/normal_space"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:contentDescription="@string/contact_avatar"
            app:layout_constraintBottom_toTopOf="@id/contact_name_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contact_name_edit_text"
            style="@style/ContactEditText"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/contact_surname_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_image_view" />

        <EditText
            android:id="@+id/contact_surname_edit_text"
            style="@style/ContactEditText"
            android:hint="@string/surname"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/contact_phone_number_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_name_edit_text" />

        <EditText
            android:id="@+id/contact_phone_number_edit_text"
            style="@style/ContactEditText"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@id/save_contact_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_surname_edit_text" />

        <Button
            android:id="@+id/save_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_phone_number_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>