<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.second_homework.SecondHomeworkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logging_callbacks_notification_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:text="@string/second_homework_logging_callbacks_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/plus_button"
            style="@style/CalcButton"
            android:text="@string/plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logging_callbacks_notification_text_view" />

        <Button
            android:id="@+id/zero_button"
            style="@style/CalcButton"
            android:backgroundTint="@color/grey"
            android:text="@string/zero"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plus_button" />

        <Button
            android:id="@+id/minus_button"
            style="@style/CalcButton"
            android:text="@string/minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zero_button" />

        <TextView
            android:id="@+id/counter_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/normal_space"
            android:background="?colorPrimary"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/counter_text_size"
            app:layout_constraintBottom_toBottomOf="@id/minus_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/plus_button"
            app:layout_constraintTop_toTopOf="@id/plus_button"
            tools:text="0" />

        <Button
            android:id="@+id/toast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:text="@string/toast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minus_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>